<resources>
    <string name="app_name">Hack2Pokemon</string>
    <string name="copyright_techkids_2016">Copyright Techkids 2016</string>
    <string name="quizz_em_all">Quizz \'Em All</string>
    <string name="music">Music</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="generation_in_quizz">GENERATION IN QUIZZ</string>
    <string name="highscore">HIGHSCORE</string>
    <string name="new_high_score">NEW HIGHSCORE!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
