<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nhan.hack2pokemon.activities.SettingActivity"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:layout_margin="16dp"
            android:textColor="@color/colorBlack"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:buttonTint="@color/colorBlack"
            android:id="@+id/checkbox_music"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_effects"
            android:layout_margin="16dp"
            android:textColor="@color/colorBlack"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:buttonTint="@color/colorBlack"
            android:id="@+id/checkbox_sound_effects"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/generation_in_quizz"
        android:id="@+id/tv_generation"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

    </LinearLayout>
</LinearLayout>
