<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nhan.hack2pokemon.activities.HomeActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout_home">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:background="@color/colorPokemonBallRed">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quizz_em_all"
                            android:layout_centerVertical="true"
                            android:textSize="20sp"
                            android:layout_margin="16dp"
                            android:textColor="@color/colorBlack"/>
                        <Button
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/icon_setting"
                            android:id="@+id/btn_setting"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="70sp"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/tv_home_score"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/highscore"
                        android:textSize="35sp"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/tv_high_score"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:background="@color/colorBlack">

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@color/colorWhite">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/copyright_techkids_2016"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlack"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </LinearLayout>
            <Button
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="235dp"
                android:background="@drawable/button_play"
                android:id="@+id/btn_play"/>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
